mediator/helm-nginx/mediator-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mediator-ingress
  namespace: credo-mediator
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - mediator-kubernetes.digicred.services
    secretName: mediator-tls
  rules:
  - host: mediator-kubernetes.digicred.services
    http:
      paths:
      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: mediator
            port:
              number: 3002
